--- a/os_mac/.skhdrc
+++ b/os_mac/.skhdrc
@@ -22,17 +22,29 @@ shift + ctrl - e : yabai -m window --swap north
 ctrl - 0x29 : yabai -m space --rotate 90
 shift + ctrl - 0x29 : yabai -m space --balance
 
+
 # send window to desktop and follow focus
 ctrl + shift - 1 : yabai -m window --space 1
 ctrl + shift - 2 : yabai -m window --space 2
 ctrl + shift - 3 : yabai -m window --space 3
 ctrl + shift - 4 : yabai -m window --space 4
 
-ctrl - 1 : yabai -m space --focus 1
-ctrl - 2 : yabai -m space --focus 2
-ctrl - 3 : yabai -m space --focus 3
-ctrl - 4 : yabai -m space --focus 4
+ctrl - 1 : ~/bin/yabai-dtop-focus 1
+ctrl - 2 : ~/bin/yabai-dtop-focus 2
+ctrl - 3 : ~/bin/yabai-dtop-focus 3
+ctrl - 4 : ~/bin/yabai-dtop-focus 4
 
+ctrl + shift - i : yabai -m window --space 1
+ctrl + shift - o : yabai -m window --space 2
+ctrl + shift - u : yabai -m window --space 3
+ctrl + shift - y : yabai -m window --space 4
+
+ctrl - i : ~/bin/yabai-dtop-focus 1
+ctrl - o : ~/bin/yabai-dtop-focus 2
+ctrl - u : ~/bin/yabai-dtop-focus 3
+ctrl - y : ~/bin/yabai-dtop-focus 4
+
+# yabai -m window --focus "$(yabai -m query --spaces --space 1 | jq -r '."last-window"')" || yabai -m space --focus 1
 ctrl - return : ~/bin/elisp '(ns/spawn-terminal)' || $TERMINAL
 
 # move floating window
