--- a/theming/colors.toml
+++ b/theming/colors.toml
@@ -1,47 +1,31 @@
-# default to fall back on (nominally generated from emacs)
+colors = ['#E8EBEC', '#006E96', '#007C00', '#C38418', '#0065C8', '#407EE7', '#C6007F', '#444748', '#6A6D6E', '#006E96', '#007C00', '#C38418', '#0065C8', '#407EE7', '#C6007F', '#444748']
 
-color.0 = "#E9ECED"
-color.1 = "#006F96"
-color.2 = "#007C00"
-color.3 = "#006F96"
-color.4 = "#0065C8"
-color.5 = "#0065C8"
-color.6 = "#C6007F"
-color.7 = "#454849"
-color.8 = "#6B6E6F"
-color.9 = "#006F96"
-color.10 = "#007C00"
-color.11 = "#006F96"
-color.12 = "#0065C8"
-color.13 = "#0065C8"
-color.14 = "#C6007F"
-color.15 = "#454849"
 color.cursor = "#0065c8"
-color.normal.background = "#e9eced"
-color.normal.foreground = "#454849"
-color.normal.faded = "#6b6e6f"
+color.normal.background = "#e8ebec"
+color.normal.foreground = "#444748"
+color.normal.faded = "#6a6d6e"
 color.normal.primary = "#c6007f"
-color.normal.alt = "#006f96"
+color.normal.alt = "#006e96"
 color.normal.strings = "#007c00"
 color.normal.assumed = "#0065c8"
-color.weak.background = "#d8d9da"
-color.weak.foreground = "#3c3d3e"
-color.weak.faded = "#616263"
-color.weak.primary = "#bd0076"
-color.weak.alt = "#006990"
-color.weak.strings = "#007700"
-color.weak.assumed = "#005fc2"
-color.strong.background = "#cecccd"
-color.strong.foreground = "#363435"
-color.strong.faded = "#5b595a"
-color.strong.primary = "#b00069"
-color.strong.alt = "#006087"
-color.strong.strings = "#006f00"
-color.strong.assumed = "#0056b9"
-color.focused.background = "#a9d2ef"
-color.focused.foreground = "#003855"
-color.focused.faded = "#21607d"
-color.focused.primary = "#b00069"
-color.focused.alt = "#006087"
-color.focused.strings = "#006f00"
-color.focused.assumed = "#0056b9"
+color.weak.background = "#d5d6d7"
+color.weak.foreground = "#393a3b"
+color.weak.faded = "#5f6061"
+color.weak.primary = "#ba0073"
+color.weak.alt = "#00668e"
+color.weak.strings = "#007400"
+color.weak.assumed = "#005dc0"
+color.strong.background = "#ccc9ca"
+color.strong.foreground = "#343132"
+color.strong.faded = "#5a5758"
+color.strong.primary = "#ac0065"
+color.strong.alt = "#005e86"
+color.strong.strings = "#006c00"
+color.strong.assumed = "#0053b6"
+color.focused.background = "#a4cfed"
+color.focused.foreground = "#093553"
+color.focused.faded = "#305b79"
+color.focused.primary = "#ac0065"
+color.focused.alt = "#005e86"
+color.focused.strings = "#006c00"
+color.focused.assumed = "#0053b6"
