--- a/theming/scratch.toml
+++ b/theming/scratch.toml
@@ -4,8 +4,8 @@ THEME_NAME = "test"
 
 emacs.theme = "tarp-mcfay"
 
-BG_COMMAND="${HOME}/.fehbg"
-# BG_COMMAND="hsetroot -solid '{{color.focused.background}}'"
+# BG_COMMAND="${HOME}/.fehbg"
+BG_COMMAND="hsetroot -solid '{{.color.focused.background}}'"
 
 font.mono.family = "Go Mono"
 font.variable.family = "Charter"
@@ -17,6 +17,8 @@ mkb.empty = "◇"
 st.prompt_char='%'
 bspwm.window.gap = 32
 x.padding = 5
+
+bspwm.monocle-window-percent = 0.55
 
 font.mono.size = 12
 font.variable.size = 12
