--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
 nohup.out
 *.elc
 *.*~
-
-wm/.wm/panel/juicers/
-wm/.wm/panel/logs
-
-ncmpcpp/.config/ncmpcpp/error.log
-
-vim/.vim/*
-vim/.config/nvim/*
-!vim/.config/nvim/init.vim
-
-qutebrowser/.config/qutebrowser/bookmarks
-qutebrowser/.config/qutebrowser/quickmarks
-qutebrowser/.config/qutebrowser/qutebrowser.conf
-qutebrowser/.config/qutebrowser/qsettings
+result
