--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,6 @@ indent_style = space
 indent_size = 2
 indent_style = space
 
-
-[os_mac/bin/*]
+[os/mac/bin/*]
 indent_size = 2
 indent_style = space
