--- a/theming/base.toml
+++ b/theming/base.toml
@@ -1,28 +1,29 @@
 # create default, and then themes are about deriving
 
-HOME = "$HOME"
-
 [gtk]
 theme = "Raleigh"
 
-[font.mono]
+[-font.meta]
+spec = '{{.family}}-{{.size}}'
+spec-space = '{{.family}} {{.size}}'
+# height='''
+# inkscape --without-gui --query-id=id1 -H <(echo '<svg><text id="id1" font-size="{{.size}}px" font-family="{{.family}}">python</text></svg>') 2>/dev/null
+# '''
 
+[font.mono]
 family="Droid Sans Mono"
 size = 10
-spec = "{{.family}}-{{.size}}"
-spec-space = "{{.family}} {{.size}}"
+- = ["-font.meta"]
 
 [font.variable]
 family = "Droid Sans"
 size = 10
-spec = '{{.family}}-{{.size}}'
-spec-space = '{{.family}} {{.size}}'
+- = ["-font.meta"]
 
 [font.panel]
 family = "{{.font.variable.family}}"
 size = "{{sub .font.variable.size 1}}"
-spec = '{{.family}}-{{.size}}'
-spec-space = '{{.family}} {{.size}}'
+- = ["-font.meta"]
 
 [bspwm]
 window-gap = 10
@@ -149,7 +150,6 @@ scrollup = '{{.panel.mpd.mouse.scrollup}}'
 
 [st]
 font = "{{.font.mono.spec}}"
-font_variable = "{{.font.variable.spec}}"
 
 cursorshape = 2
 cursorthickness = 2
@@ -191,8 +191,9 @@ set-option -g -q mouse on
 """
 
 [mpd]
-music-dir = "$HOME/Music"
-mpd-dir = "$HOME/.config/mpd"
+# portable_enabled = '{{sh "mount | grep "${HOME}/usb""}}'
+music-dir = "{{.env.HOME}}/Music"
+mpd-dir = "{{.env.HOME}}/.config/mpd"
 
 [2bspwm]
 
