--- a/theming/scratch.toml
+++ b/theming/scratch.toml
@@ -4,15 +4,22 @@ THEME_NAME = "test"
 
 emacs.theme = "tarp-mcfay"
 
-# BG_COMMAND="${HOME}/.fehbg"
-BG_COMMAND="hsetroot -solid '{{.color.focused.background}}'"
+BG_COMMAND="${HOME}/.fehbg"
+# BG_COMMAND="hsetroot -solid '{{.color.focused.background}}'"
 
 font.mono.family = "Go Mono"
-font.variable.family = "Charter"
+font.variable.family = "Equity Text B"
 
-mkb.complete = "◆"
-mkb.sep = "◆"
-mkb.empty = "◇"
+# mkb.complete = "◆"
+# mkb.sep = "⬖"
+# mkb.empty = "◇"
+
+# st.prompt_char = '🔵'
+
+# 🔵⚪
+mkb.complete = "■"
+mkb.sep = "▩"
+mkb.empty = "□"
 
 st.prompt_char='%'
 bspwm.window.gap = 32
@@ -21,10 +28,9 @@ x.padding = 5
 bspwm.monocle-window-percent = 0.55
 
 font.mono.size = 12
-font.variable.size = 12
+font.variable.size = 14
 
 picom.shadow.enabled = false
-
 
 bspwm.bspwmrc-extend = """
 tag_borders &
