--- a/theming/scratch.toml
+++ b/theming/scratch.toml
@@ -2,10 +2,13 @@
 
 THEME_NAME = "test"
 
+env.HOME = '/Users/nathan'
+
 emacs.theme = "tarp-mcfay"
 
-BG_COMMAND="${HOME}/.fehbg"
+# BG_COMMAND="${HOME}/.fehbg"
 # BG_COMMAND="hsetroot -solid '{{.color.focused.background}}'"
+BG_COMMAND="wallmac tile '{{.env.HOME}}/Downloads/mpv-shot0095.jpg'"
 
 font.mono.family = "Go Mono"
 font.variable.family = "Equity Text B"
@@ -16,19 +19,18 @@ font.variable.family = "Equity Text B"
 
 # st.prompt_char = '🔵'
 
-# 🔵⚪
 mkb.complete = "■"
 mkb.sep = "▩"
 mkb.empty = "□"
 
 st.prompt_char='%'
-bspwm.window.gap = 32
+bspwm.window-gap = 24
 x.padding = 5
 
 bspwm.monocle-window-percent = 0.55
 
-font.mono.size = 12
-font.variable.size = 14
+font.mono.size = 18
+font.variable.size = 18
 
 picom.shadow.enabled = false
 
