--- a/theming/archive/scratch.toml
+++ b/theming/archive/scratch.toml
@@ -6,11 +6,12 @@ env.HOME = '/Users/nathan'
 
 emacs.theme = "tarp-mcfay"
 
-# BG_COMMAND="${HOME}/.fehbg"
+BG_COMMAND="${HOME}/.fehbg"
 # BG_COMMAND="hsetroot -solid '{{.color.focused.background}}'"
-BG_COMMAND="wallmac tile '{{.env.HOME}}/Downloads/mpv-shot0095.jpg'"
 
-font.mono.family = "Go Mono"
+# font.mono.family = "Go Mono"
+font.mono.family = "Triplicate T4c"
+# font.mono.family = "Triplicate T3c"
 font.variable.family = "Equity Text B"
 
 # mkb.complete = "◆"
@@ -19,18 +20,27 @@ font.variable.family = "Equity Text B"
 
 # st.prompt_char = '🔵'
 
-mkb.complete = "■"
-mkb.sep = "▩"
-mkb.empty = "□"
+# mkb.complete = " "
+# mkb.sep = "~"
+# mkb.empty = " "
+
+mkb.complete = "A"
+mkb.sep = "A"
+mkb.empty = "H"
+
+# mkb.complete = "🟣"
+# mkb.sep = "🔵"
+# mkb.empty = "🟢"
+
 
 st.prompt_char='%'
-bspwm.window-gap = 24
+bspwm.window-gap = 40
 x.padding = 5
 
 bspwm.monocle-window-percent = 0.55
 
-font.mono.size = 18
-font.variable.size = 18
+font.mono.size = 12
+font.variable.size = 13
 
 picom.shadow.enabled = false
 
@@ -38,3 +48,5 @@ bspwm.bspwmrc-extend = """
 tag_borders &
 subscription_rules &
 """
+
+
