--- a/tools/.gitconfig
+++ b/tools/.gitconfig
@@ -1,4 +1,5 @@
-[url "git@github.com:"]
-	pushInsteadOf = "https://github.com/"
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
+
 [credential]
 	helper = cache --timeout 36000
