--- a/tools/.gitconfig
+++ b/tools/.gitconfig
@@ -1,6 +1,9 @@
 [url "ssh://git@github.com/"]
 	insteadOf = https://github.com/
 
+[url "ssh://git@gist.github.com/"]
+	insteadOf = https://gist.github.com/
+
 [credential]
 	helper = cache --timeout 36000
 [user]
